--- a/package.json
+++ b/package.json
@@ -1,10 +1,29 @@
 {
   "name": "game-time-sentry",
+  "productName": "game-time-sentry",
   "version": "0.1.0",
   "description": "Simple background application for tracking game time",
-  "main": "./src/main.js",
+  "main": ".vite/build/main.js",
   "scripts": {
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "echo \"No linting configured\"",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "@electron-forge/cli": "^7.4.0",
+    "@electron-forge/maker-deb": "^7.4.0",
+    "@electron-forge/maker-rpm": "^7.4.0",
+    "@electron-forge/maker-squirrel": "^7.4.0",
+    "@electron-forge/maker-zip": "^7.4.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.4.0",
+    "@electron-forge/plugin-fuses": "^7.4.0",
+    "@electron-forge/plugin-vite": "^7.4.0",
+    "@electron/fuses": "^1.8.0",
+    "electron": "32.1.2",
+    "vite": "^5.0.12"
   },
   "repository": {
     "type": "git",
@@ -21,5 +40,8 @@
   "bugs": {
     "url": "https://github.com/Game-Time-Sentry/game-time-sentry/issues"
   },
-  "homepage": "https://github.com/Game-Time-Sentry/game-time-sentry#readme"
+  "homepage": "https://github.com/Game-Time-Sentry/game-time-sentry#readme",
+  "dependencies": {
+    "electron-squirrel-startup": "^1.0.1"
+  }
 }
