--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron-forge/plugin-vite": "^7.4.0",
     "@electron/fuses": "^1.8.0",
+    "autoprefixer": "^10.4.20",
     "electron": "32.1.2",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12",
     "vite": "^5.0.12"
   },
   "repository": {
