--- a/package.json
+++ b/package.json
@@ -45,11 +45,10 @@
   },
   "homepage": "https://github.com/Game-Time-Sentry/game-time-sentry#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
-    "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0"
+    "react-redux": "^9.1.2"
   }
 }
