--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@electron/fuses": "^1.8.0",
     "autoprefixer": "^10.4.20",
     "electron": "32.1.2",
+    "jest": "^29.7.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.12",
     "vite": "^5.0.12"
